# cellpy-core

./: .gitignore  AGENTS.md  HISTORY.md  README.md  cellpy-core.code-workspace  hello.py  pyproject.toml  scratch.db
.cursor/commands/: graphify.md  iflow-cleanup.md  iflow-close.md  iflow-fix.md  iflow-graphify.md  iflow-init.md  iflow-pause.md  iflow-pick.md  iflow-plan.md  iflow-start.md  iflow-status.md  iflow-yolo.md  iflow.md  issue-close.md  issue-init.md  issue-pick.md  issue-plan.md  issue-start.md  issue-yolo.md
.cursor/rules/: cellpy-core-migration.mdc  issueflow-rules.mdc  kiss.mdc  this-project.mdc
.github/workflows/: simpletest.yml
.issueflows/: config.toml
.issueflows/01-current-issues/: issue13_status.md  issue36_original.md  issue36_status.md
.issueflows/03-solved-issues/: issue10_original.md  issue10_plan.md  issue10_status.md  (+34 more)
dev/: check_polars.py  col_structure_development.py  demo_mock_data.py  make_harmonized_raw.py  regenerate_test_data.py  view_test_data.py
docs/: cellpy-core.code-workspace  core_output_definition.md  cycle_table_definition.md  data-object-definition.md  development.md  functionality.md  harmonized_raw_definition.md  issue-workflow.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
tests/: __init__.py  conftest.py  test_config_columns.py  test_creation.py  test_golden.py  test_harmonized_fixture.py  test_header_mapping.py  test_import.py  test_limits.py  test_metadata.py  test_schema.py  test_timestamps.py  test_units_converters.py  test_units_optional.py
tmp/: simple.parquet
(+56 files in other folders)
